# dev-ops-practice

.github/workflows/: python-app.yml
ansible/: ansible.cfg
ansible/inventory/: default_vagrant.yml
ansible/roles/: README.md
ansible/roles/web_app/files/: app_python
ansible/roles/web_app/tasks/: main.yml  wipe.yml
app-python/: .dockerignore  README.md  justfile  pyproject.toml
app-python/tests/: test_main.py
app_python/: Dockerfile  PYTHON.md  README.md  justfile  requirements.txt
app_python/src/: main.py  timezone.py
app_python/templates/: webprint.j2
app_python/tests/: conftest.py  test_main.py  test_timezone.py
k8s/: 11.md  12.md  13.md  14.md  HELM.md  README.md  ingress.yml  init-container.yaml  multi-init.yaml  python-deployment.yml  python-service.yml
k8s/app-python/: values.yaml
k8s/app-python/templates/: configmap.yaml  deployment.yaml  secrets.yaml  servicemonitor.yaml  statefulset.yaml
k8s/app-python/templates/hooks/: post-install.yaml  pre-install.yaml
k8s/files/: config.json
monitoring/: METRICS.md  docker-compose.yml
