[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Demezy <38487319+Demezy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.1"
fastapi = {extras = ["all"], version = "^0.115.4"}
Jinja2 = "^3.1.3"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
